Implementado: Sistema de cards estilo Spotify, player de música e fallback para imagens quebradas

--- a/index.html
+++ b/index.html
@@ -3,19 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site de Músicas</title>
+    <meta name="description" content="Mini aplicativo de músicas">
+    <title>MusicApp - Sua Biblioteca de Músicas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Meu Site de Músicas</h1>
+    <header class="app-header">
+        <nav class="nav-container">
+            <h1>MusicApp</h1>
+            <div class="search-container">
+                <input type="search" id="pesquisa" placeholder="Buscar música ou artista...">
+            </div>
+        </nav>
     </header>
     
-    <main>
-        <div id="lista-de-musicas">
-            <!-- Os cards de música serão inseridos aqui via JavaScript -->
-        </div>
+    <main class="main-content">
+        <section class="music-section">
+            <h2>Sua Biblioteca</h2>
+            <div id="lista-de-musicas" class="music-grid">
+                <!-- Cards de música serão inseridos aqui via JavaScript -->
+            </div>
+        </section>
+
+        <aside class="player-container">
+            <!-- Player de música será adicionado aqui posteriormente -->
+        </aside>
     </main>
+
+    <footer class="app-footer">
+        <p>&copy; 2025 MusicApp - Desenvolvido com ❤️</p>
+    </footer>
 
     <script src="app.js"></script>
 </body>
