test: atualiza título para testar deploy automático

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Mini aplicativo de músicas">
-    <title>MusicApp - Sua Biblioteca de Músicas</title>
+    <meta name="description" content="Mini aplicativo de músicas com deploy automático">
+    <title>MusicApp v2 - Sua Biblioteca de Músicas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
