Teste de deploy automático - v1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Teste de Deploy Automático - v1 -->
     <header class="app-header">
         <nav class="nav-container">
             <h1>MusicApp</h1>
