--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mini aplicativo de músicas com deploy automático">
-    <title>MusicApp v2 - Sua Biblioteca de Músicas</title>
+    <title>MuriloMusicApp - Sua Biblioteca de Músicas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Teste de Deploy Automático - v1 -->
     <header class="app-header">
         <nav class="nav-container">
-            <h1>MusicApp</h1>
+            <h1>MuriloMusicApp</h1>
             <div class="search-container">
                 <input type="search" id="pesquisa" placeholder="Buscar música ou artista...">
             </div>
